@@ -1,8 +1,9 @@
 update-manager (1:0.87.16) hardy; urgency=low
 
   * DistUpgrade/DistUpgradeViewText.py:
-    - show prompt again after showing details (thanks to 
-      James Troup)
+    - show prompt again after showing details 
+    - use pager for long change entries
+    (thanks to James Troup)
   * po/*.po:
     - updated translations (LP: #210699)
 
